--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             level: 3 // 지도의 확대 레벨
         };
 
-                // 마커를 생성합니다
+        // 마커가 표시될 위치입니다 
+        var markerPosition  = new kakao.maps.LatLng(33.450701, 126.570667); 
+
+        // 마커를 생성합니다
         var marker = new kakao.maps.Marker({
             position: markerPosition
         });
